# Cellar

./: Cargo.toml  README.md  installer_workflow.md  plan.md  todo.md
src/: lib.rs  main.rs
src/cli/: commands.rs
src/config/: game.rs  mod.rs  validation.rs
src/desktop/: icon.rs  mod.rs  shortcut.rs
src/launch/: command.rs  executor.rs  mod.rs
src/runners/: common.rs  dxvk.rs  mod.rs  proton.rs
src/tests/: cli.rs  config.rs  launch.rs  mod.rs  runners.rs  utils.rs
src/utils/: archive.rs  fs.rs
