[package]
name = "cellar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.2"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tar = "0.4.44"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"

[dev-dependencies]
tempfile = "3.20.0"
